Changes go downward, months go upward.  Please scroll to the bottom for a legend.
Changelog started January 1, 2004; Currently at $Revision: 10177 $.

SMF 2.0                                                                      ???
================================================================================

October 2010
--------------------------------------------------------------------------------
 * Missing icon in profile/ignore boards. Markup/css to allow large content above the linktree (Profile.template.php, index.template.php, index.css)
 * Minor cleaning up in admin. Better highlighting of search results. Defined new_win class. Better description for post options (Admin.template.php, admin.css, index.css, Post.english.php)
 * Fixed post-breaking bug in IE6 and IE7. Removed $context['right_to_left'] from two templates. (ie6.css, ie7.css, index.css, rtl.css, Display.template.php, Memberlist.template.php)
 * Fixed board selection in profile and help. Cleaned up stats markup. (Profile.template.php, Help.template.php, Stats.template.php, index.css, rtl.css)
 * Editors without BBC buttons caused JavaScript errors. (editor.js) [Bug 4475]
 * New replies added by JavaScript did not get correct backgrounds. (Post template) [Bug 4474]
 ! Nested move BBC tags caused trouble for some browsers. (Subs.php)
 ! Added default forum_width of 90% to install and upgrade files (install.sql, upgrade_2-0.sql)
 ! Removed side padding from body (relying solely on forum_width setting now). (index.css)
 ! Sorted cell borders for message index child boards table. (index.css, rtl.css) [Bug 4490]
 * Added alt text fallback for quick edit icon. Changed quickbuttons font declaration to shorthand notation. (Display.template.php, index.css)
 ! CSS colour fallback for buttonlists, minor css tweaks. (index.css, rtl.css, ie6.css, ie7.css, menu_gfx.png)